Bug Fix in the Alignment

--- a/IMS-UI/ClientApp/src/app/IMS.Modules/admin/Components/reports-table/reports-table.component.css
+++ b/IMS-UI/ClientApp/src/app/IMS.Modules/admin/Components/reports-table/reports-table.component.css
@@ -39,6 +39,7 @@ th {
     color: #9597ab;
     font-size: large;
     text-transform: uppercase;
+    cursor: pointer;
 }
 
 table {
